--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
        
     </ul>
 </div>
-<input type="text">
-<button>Add Item</button>
+<input type="text" id="item">
+<button id="add">Add Item</button>
+<button id="delete">Delete Item</button>
     </div>
     <script src="index.js"></script>
 </body>
