--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
         <h1>To-Do List</h1>
 <div id="list">
-    <ul>
+    <ul id="items">
        
     </ul>
 </div>
