--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <div class="wrapper">
         <h1>To-Do List</h1>
 <div id="list">
+    <form action="">
     <ul id="items">
        
     </ul>
+    </form>
 </div>
 <input type="text" id="item">
 <button id="add">Add Item</button>
+<p id="error">Input is empty</p>
 <button id="delete">Delete Item</button>
     </div>
     <script src="index.js"></script>
